fix: image alt updated

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </p>
 
         <div class="details">
-          <img src="./images/icon-music.svg" atl="music icon" />
+          <img src="./images/icon-music.svg" alt="music icon" />
 
           <span class="plan">
             <span class="name">Annual Plan</span>
